--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.App button{
+  margin-left: 30px;
+  background: #554478;
+  border: 1px solid #554478;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 1rem;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
